chore: add description

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "tpw"
 version = "0.1.0"
 edition = "2021"
 license = "MIT"
-license-file = "LICENSE"
+description = "A macOS command-line tool for monitoring and displaying real-time power usage statistics"
 documentation = "https://docs.rs/tpw"
 repository = "https://github.com/lzt1008/tpw"
 homepage = "https://github.com/lzt1008/tpw"
