--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,7 +64,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          repository: lzt1008/homebrew-tap
+          repository: lzt1008/homebrew-tpw
 
       - name: Setup Git Config
         run: |
